--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,42 @@ body {
   text-align: center;
 }
 
+p.description {
+  text-transform: none;
+  line-height: 1.2;
+  padding: 0 4rem 3rem;
+  text-align: justify;
+}
+
+@media screen and (max-width: 700px) {
+  p.description {
+    padding: 0 1rem 1rem;
+  }
+}
+figure {
+  width: 100%;
+  aspect-ratio: 1/1;
+  overflow: hidden;
+}
+
+i {
+  font-style: normal;
+}
+
+i.herramientas {
+  display: block;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.faq {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .myname {
   font-size: 60px !important;
   text-transform: uppercase;
@@ -78,14 +114,23 @@ body {
 }
 section h3 {
   display: inline;
-  font-size: 35px !important;
+  font-size: 1.5rem;
   font-family: "tradaregular";
+  text-transform: uppercase;
+  font-weight: 700;
   margin-bottom: 15px;
 }
 
 section p {
   margin: 20px auto;
   font-size: 20px;
+}
+
+figcaption {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .row {
@@ -125,16 +170,12 @@ section p {
     box-shadow: none;
     padding: 0.5rem 0;
   }
-
   .navbar-item, .navbar-link {
     display: inline;
     margin: 0 auto;
   }
-
   .navbar-end {
     margin: 0 auto;
     text-align: center;
   }
-}
-
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
