--- a/css/main.scss
+++ b/css/main.scss
@@ -59,7 +59,41 @@ body{
     text-align: center;
 }
 
+p.description{
+    text-transform: none;
+    line-height: 1.2;
+    padding: 0 4rem 3rem;
+    text-align: justify;
+}
+@media screen and (max-width: 700px) {
+    p.description {
+      padding: 0 1rem 1rem;
+    }
+  }
 
+figure{
+    width: 100%;
+    aspect-ratio:  1/1;
+    overflow: hidden;
+}
+
+i{
+    font-style: normal;
+}
+
+i.herramientas{
+    display: block;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: bold;
+
+}
+
+.faq{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
 
 
 //   PERFIL  {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}
@@ -115,14 +149,23 @@ body{
 // TITULO DEL PORTFOLIO
 section h3{
     display: inline;
-    font-size: 35px!important;
+    font-size: 1.5rem;
     font-family: 'tradaregular';
+    text-transform: uppercase;
+    font-weight: 700;
     margin-bottom: 15px;
 }
 
 section p{
     margin: 20px auto;
     font-size: 20px;
+}
+
+figcaption{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .row{
