--- a/css/main.scss
+++ b/css/main.scss
@@ -114,7 +114,7 @@ i.herramientas{
 
 //IMAGEN DE PERFIL
 .profile-img{
-    z-index: 1000;
+    z-index: 2;
     width: 280px;
 //    border: 10px solid $color-Principal;
 }
@@ -122,7 +122,7 @@ i.herramientas{
     .profile-img{
         position: absolute;
         transform: translate(-50%, -50%);
-        z-index: 1000;
+        z-index: 2;
     }
 }
 
@@ -226,3 +226,20 @@ figcaption{
 }
 
 
+.modal-content{
+    width: 80%!important;
+    .box{
+        padding: 3rem;
+        color: black;
+        .modal-title{
+            font-size: 2rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            margin: 1rem 0;
+        }
+        p.herramientas{
+            font-size: 1.2rem;
+            margin: 1rem 0 2rem;
+        }
+    }
+}
