--- a/css/main.css
+++ b/css/main.css
@@ -195,4 +195,13 @@ figcaption {
 .modal-content .box p.herramientas {
   font-size: 1.2rem;
   margin: 1rem 0 2rem;
+}
+
+@media (max-width: 700px) {
+  .modal-content {
+    width: 100% !important;
+  }
+  .modal-content .box {
+    padding: 6px;
+  }
 }/*# sourceMappingURL=main.css.map */
